redid index.html, some minor changes on footer and header

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,11 +1,22 @@
 <footer>
+
+    <div id="search">
+        <button type="button" class="close">×</button>
+        <form>
+            <div class="logo">
+                <img src="{{site.baseurl}}/assets/images/logo-fa.jpg">
+            </div>
+            <input type="search" placeholder="اینجا تایپ کنید" name="search">
+            <button type="submit" class="btn-search"><i class="fa fa-search"></i></button>
+        </form>
+    </div>
     <div class="top">
         <div class="logo">
             <a href="http://ichto.ir" target="_blank">
-                <img style="width:100px; height:auto;" src="{{site.baseurl}}/assets/images/ichto-logo.jpg">                
-            </a>   
+                <img style="width:100px; height:auto;" src="{{site.baseurl}}/assets/images/ichto-logo.png">
+            </a>
         </div>
-        <div class="socials">             
+        <div class="socials">
             <a href="#">
                 <i class="fa fa-facebook"></i>
             </a>
@@ -33,13 +44,13 @@
         </div> -->
     </div>
     <div class="menu">
-        <ul>           
+        <ul>
             <li>
                 <a href="#">درباره ما</a>
             </li>
             <li>
                 <a href="#">تلفن های ضروری </a>
-            </li>          
+            </li>
             <li>
                 <a href="#">سوالات متداول</a>
             </li>
