--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <header>
     <div class="logo-wrapper">
         <a href="">
-            <img src="{{site.baseurl}}/assets/images/logo-f.jpg" alt="">
+            <img src="{{site.baseurl}}/assets/images/logo-fa.jpg" alt="">
         </a>
     </div>
     <div class="primary-menu-wrapper">
@@ -27,13 +27,13 @@
                 <div class="left">
                     <ul>
                         <li class="search">
-                            <!-- <a href="#">
+                            <a href="#search">
                                 <i class="fa fa-search"></i>
-                            </a> -->
-                            <form id="frmSearch" action="www.google.com">
+                            </a>
+                            <!-- <form id="frmSearch" action="www.google.com">
                                 <input type="text" name="search" id="search" class="search-input">
                                 <input type="submit" class="btn-submit-search" value="">
-                            </form>
+                            </form> -->
                             <!-- <div class="search-input">
                                 <span class="input-icon"><span class="fa fa-user"></span>
                                 <input type="text" class="input-with-icon" id="form-name">
