--- a/assets/css/component/__component-dir.scss
+++ b/assets/css/component/__component-dir.scss
@@ -4,4 +4,7 @@
 @import 'timeline'; 
 @import 'pagination';
 @import 'trip-search';
-@import 'slider';
+// @import 'slider';
+@import 'section';
+@import 'events';
+@import 'search';
