--- a/assets/css/component/_hero.scss
+++ b/assets/css/component/_hero.scss
@@ -65,7 +65,7 @@
     width: 100%;
     height: 300px;
     object-fit: cover;
-    @include for-size(tablet-portrait-up) {
+    @media (min-width: 601px) {
       height: 400px;
     }
     @include for-size(desktop-up) {
