--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -31,6 +31,7 @@ a {
         .timeline-sidebar {
           padding-right: 20px;
           margin-bottom: 20px;
+          padding-top: 20px;
         }
       }
       @include for-size(tablet-landscape-up) {
