--- a/assets/css/pages/_province.scss
+++ b/assets/css/pages/_province.scss
@@ -7,7 +7,7 @@
     color: $accent-fc;
     background: $main;
     line-height: 48px;
-    font-size: 24px;
+    font-size: 20px;
   }
   .categories {
     margin: 0 130px 30px 130px;
@@ -38,130 +38,130 @@
   }
 }
 
-.crafts {
-  &.province {
-    .title {
-      width: auto;
-      height: 48px;
-      margin: 0 auto;
-      text-align: center;
-      color: white;
-      background: $accent;
-      line-height: 48px;
-      font-size: 24px;
-    }
-    margin: 80px 0 0 0;
-    padding: 30px 130px 0 130px;
-    @media (max-width: 1000px) {
-      padding: 30px 0;
-    }
+// .crafts {
+//   &.province {
+//     .title {
+//       width: auto;
+//       height: 48px;
+//       margin: 0 auto;
+//       text-align: center;
+//       color: white;
+//       background: $accent;
+//       line-height: 48px;
+//       font-size: 24px;
+//     }
+//     margin: 80px 0 0 0;
+//     padding: 30px 130px 0 130px;
+//     @media (max-width: 1000px) {
+//       padding: 30px 0;
+//     }
 
-    // height: 600px;
-    background: #e7e7e7;
-    .slider.craft {
-      border: 0;
-      padding: 80px 0;
-      @media (max-width: 768px) {
-        margin: 0 30px;        
-      }
-      padding-top: 80px;
-      .center {
-        .image {
-          background: $white;
-          clip-path: none;
-          border: none;
-          .title {
-            margin: 0;
-            color: black;
-            background: $white;
-            font-weight: 700;
-            text-align: right;
-            padding: 20px;
-            width: auto;
-          }
-          .text {
-            margin: 0;
-            color: black;
-            background: $white;
-            line-height: 24px;
-          }
-          .link {
-            background: $white;
-            padding: 20px;
-          }
-        }
-      }
-    }
-  }
-}
+//     // height: 600px;
+//     background: #e7e7e7;
+//     .slider.craft {
+//       border: 0;
+//       padding: 80px 0;
+//       @media (max-width: 768px) {
+//         margin: 0 30px;
+//       }
+//       padding-top: 80px;
+//       .center {
+//         .image {
+//           background: $white;
+//           clip-path: none;
+//           border: none;
+//           .title {
+//             margin: 0;
+//             color: black;
+//             background: $white;
+//             font-weight: 700;
+//             text-align: right;
+//             padding: 20px;
+//             width: auto;
+//           }
+//           .text {
+//             margin: 0;
+//             color: black;
+//             background: $white;
+//             line-height: 24px;
+//           }
+//           .link {
+//             background: $white;
+//             padding: 20px;
+//           }
+//         }
+//       }
+//     }
+//   }
+// }
 
-.roi {
-  &.province {
-    margin: 50px 130px;
-    @media (max-width: 1025px) {
-      margin: 50px 30px;
-    }
-  }
-}
+// .roi {
+//   &.province {
+//     margin: 50px 130px;
+//     @media (max-width: 1025px) {
+//       margin: 50px 30px;
+//     }
+//   }
+// }
 
-.content {
-  .routes.province {
-    @media (max-width: 1025px) {
-      min-height: auto;
-    }
-    .title {
-      width: auto;
-      height: 48px;
-      margin: 0 auto;
-      text-align: center;
-      color: $accent-fc;
-      background: $accent;
-      line-height: 48px;
-      font-size: 24px;
-    }
-    .slider.route {
-      border: none;
-    }
-    @media (max-width: 1160px) {
-      position: relative;
-      top: -100px;
-      padding: 30px;
-      margin: 0;
-    }
-  }
-}
-.villages.province {
-  .title {
-    width: auto;
-    height: 48px;
-    margin: 0 auto;
-    text-align: center;
-    color: $accent-fc;
-    background: $accent;
-    line-height: 48px;
-    font-size: 24px;
-  }
-  .slider.route {
-    border: none;
-  }
-  .slider.village {
-    .center {
-      .image {
-        clip-path: none;
-      }
-      .slick-slide {
-        .image {
-          border: none;
-        }
-        .text {
-          margin: 0;
-          color: black;
-          background: #e7e7e7;
-        }
-      }
-    }
-  }
-}
+// .content {
+//   .routes.province {
+//     @media (max-width: 1025px) {
+//       min-height: auto;
+//     }
+//     .title {
+//       width: auto;
+//       height: 48px;
+//       margin: 0 auto;
+//       text-align: center;
+//       color: $accent-fc;
+//       background: $accent;
+//       line-height: 48px;
+//       font-size: 24px;
+//     }
+//     .slider.route {
+//       border: none;
+//     }
+//     @media (max-width: 1160px) {
+//       position: relative;
+//       top: -100px;
+//       padding: 30px;
+//       margin: 0;
+//     }
+//   }
+// }
+// .villages.province {
+//   .title {
+//     width: auto;
+//     height: 48px;
+//     margin: 0 auto;
+//     text-align: center;
+//     color: $accent-fc;
+//     background: $accent;
+//     line-height: 48px;
+//     font-size: 24px;
+//   }
+//   .slider.route {
+//     border: none;
+//   }
+//   .slider.village {
+//     .center {
+//       .image {
+//         clip-path: none;
+//       }
+//       .slick-slide {
+//         .image {
+//           border: none;
+//         }
+//         .text {
+//           margin: 0;
+//           color: black;
+//           background: #e7e7e7;
+//         }
+//       }
+//     }
+//   }
+// }
 
 .history {
   //   display: flex;
@@ -208,6 +208,10 @@
         height: 100px;
         overflow: hidden;
         // min-height: 100px;
+        -moz-transition: height 0.5s;
+        -ms-transition: height 0.5s;
+        -o-transition: height 0.5s;
+        -webkit-transition: height 0.5s;
         transition: height 0.5s;
         @media (max-width: 1150px) {
           padding-left: 0;
@@ -326,9 +330,9 @@
   form {
     display: inline;
   }
-  margin: 50px 130px;
+  margin: 50px 124px;
   @media (max-width: 768px) {
-    margin: 50px 30px;
+    margin: 50px 20px;
   }
   .title {
     width: auto;
@@ -338,7 +342,7 @@
     color: $white;
     background: $main;
     line-height: 48px;
-    font-size: 24px;
+    font-size: 20px;
   }
   .content {
     display: flex;
@@ -353,10 +357,10 @@
       width: 50%;
       margin-right: 10px;
       .suggestions {
-        padding-top: 30px; 
+        padding-top: 30px;
         textarea {
           width: 100%;
-          padding: 2px 20px; 
+          padding: 2px 20px;
           box-sizing: border-box;
           outline: 0 none;
         }
@@ -404,10 +408,10 @@
         }
         .rating > span:hover:before,
         .rating > span:hover ~ span:before {
-           content: "\2605";
-           position: absolute;
-           left: 0; 
-           color: gold;
+          content: "\2605";
+          position: absolute;
+          left: 0;
+          color: gold;
         }
       }
     }
@@ -416,9 +420,9 @@
       display: flex;
       flex-direction: column;
       width: 50%;
-      margin-left: 10px; 
+      margin-left: 10px;
       .top {
-        padding: 30px 0;        
+        padding: 30px 0;
         input {
           margin-bottom: 10px;
           height: 40px;
@@ -455,13 +459,13 @@
           margin-left: 10px;
           position: relative;
           button {
-            background: #4e4e51;            
+            background: #4e4e51;
           }
-          .icon{
-            position:absolute;
-            left:18px;
-            top:5px;
-            font-size:30px;
+          .icon {
+            position: absolute;
+            left: 18px;
+            top: 5px;
+            font-size: 30px;
           }
         }
       }
@@ -472,7 +476,7 @@
     .content {
       flex-direction: column-reverse;
       .left {
-        width: 100%;        
+        width: 100%;
         margin-right: 0;
       }
       .right {
