some more minor fixes

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -39,11 +39,30 @@
                                 <input type="text" class="input-with-icon" id="form-name">
                             </div>  -->
                         </li>
-                        <li>                            
+                        <!-- <li>                            
                             <a href="#">ورود</a>
                         </li>
                         <li>
                                 <a href="#">ثبت نام</a>
+                        </li> -->
+                        <li>
+                            <div class="dropdown">
+                                <button class="dropdown-btn" type="button">
+                                    حساب کاربری
+                                    <i class="fa fa-user-circle"></i>
+                                </button>
+                                <div class="dropdown-content">
+                                    <a href="#">
+                                        ثبت نام
+                                        <!-- <img style="position: relative; top: 5px; margin-right: 15px;width:20px; height:auto" src="http://visitiran.ir/static/tourismiran/images/flags/fa.svg"> -->
+                                        <i class="fa fa-user-plus"></i>
+                                    </a>
+                                    <a href="#">
+                                        ورود
+                                        <i class="fa fa-sign-in"></i>
+                                    </a>
+                                </div>
+                            </div>
                         </li>
                         <li>
                             <div class="dropdown">
