--- a/assets/css/base/_typography.scss
+++ b/assets/css/base/_typography.scss
@@ -7,13 +7,18 @@
 // }
 
 html {
-  font-family: IRANSans;
+  // font-family: IRANSans, yn;
+  font-family: IRANSans, yn;
   font-weight: 300;
 }
 
 input, textarea, select, button {
-    font-family: IRANSans;
+    font-family: IRANSans, yn;
     font-weight: 300;
+}
+
+.farsi-number {
+  font-family: yn;
 }
 
 
