--- a/assets/css/component/_section.scss
+++ b/assets/css/component/_section.scss
@@ -222,8 +222,12 @@ $desktop-title-font-size: 28px;
       .text {
         direction: rtl;
         padding: 20px;
-        background: $accent;
+        background: $main;                
         margin: 10px -10px 0 -10px;
+        @media (min-width: 700px) {
+          margin: 10px 5px;
+        }
+        
         color: $white;
         margin-bottom: 10px;
         p {
@@ -237,7 +241,7 @@ $desktop-title-font-size: 28px;
           font-size: 20px;
           margin-bottom: 10px;
         }
-      }
+      }      
     }
   }
 }
