--- a/assets/css/base/_typography.scss
+++ b/assets/css/base/_typography.scss
@@ -12,15 +12,17 @@ html {
   font-weight: 300;
 }
 
-input, textarea, select, button {
-    font-family: IRANSans, yn;
-    font-weight: 300;
+input,
+textarea,
+select,
+button {
+  font-family: IRANSans, yn;
+  font-weight: 300;
 }
 
 .farsi-number {
   font-family: yn;
 }
-
 
 .my-prev.slick-arrow {
   position: absolute;
@@ -28,8 +30,22 @@ input, textarea, select, button {
   right: 0;
   top: 45%;
   margin-right: -100px;
-  font-size: 100px;  
-  color: $main;  
+  font-size: 100px;
+  color: $main;
+}
+
+.slick-arrow.inside {
+  img {
+    width: 100px;
+    height: 100px;
+    z-index: 1;
+  }
+  .slick-next {
+    right: 0px;
+  }
+  .slick-prev {
+    left: 0;
+  }
 }
 
 .my-next.slick-arrow {
@@ -39,7 +55,6 @@ input, textarea, select, button {
   left: 0;
   font-size: 100px;
   margin-left: -100px;
-  
-    color: $main;
-  
+  color: $main;
+  z-index: 1;
 }
