--- a/assets/css/component/_search.scss
+++ b/assets/css/component/_search.scss
@@ -24,10 +24,15 @@
   form {    
     .logo {
         text-align: center;
+        img {
+          width: 130px;
+          height: 130px;
+        }
     }
     flex: 0 0 300px;
+    margin-bottom: 200px;
     @media (min-width: 600px) {
-        flex: 0 0 450px;
+        flex: 0 0 450px;        
     }
     @media (min-width: 900px) {
         flex: 0 0 650px;
