--- a/assets/css/component/_hero.scss
+++ b/assets/css/component/_hero.scss
@@ -123,3 +123,48 @@
     }
   }
 }
+
+
+.my-prev.slick-arrow {
+  position: absolute;
+  cursor: pointer;
+  right: 0;
+  top: 45%;
+  margin-right: -100px;
+  font-size: 100px;
+  color: $main;
+}
+
+.slick-arrow.inside {
+  z-index: 1;  
+  .slick-next {
+    background: url("../images/arrow-right.png") center;
+    right: 0px;
+    height: 130px;
+    width: 100px;
+    &:before {
+      content: ""
+    }
+  }
+  .slick-prev {
+    background: url("../images/arrow-left.png") center;
+    left: 0;
+    width: 100px;
+    height: 130px;
+    z-index: 1;
+    &:before {
+      content: ""
+    }
+  }
+}
+
+.my-next.slick-arrow {
+  position: absolute;
+  cursor: pointer;
+  top: 45%;
+  left: 0;
+  font-size: 100px;
+  margin-left: -100px;
+  color: $main;
+  z-index: 1;
+}
