--- a/assets/css/component/_hero.scss
+++ b/assets/css/component/_hero.scss
@@ -133,30 +133,34 @@
   margin-right: -100px;
   font-size: 100px;
   color: $main;
+  &.inside {
+    margin-right: 0;
+    color: white;
+  }
 }
 
-.slick-arrow.inside {
-  z-index: 1;  
-  .slick-next {
-    background: url("../images/arrow-right.png") center;
-    right: 0px;
-    height: 130px;
-    width: 100px;
-    &:before {
-      content: ""
-    }
-  }
-  .slick-prev {
-    background: url("../images/arrow-left.png") center;
-    left: 0;
-    width: 100px;
-    height: 130px;
-    z-index: 1;
-    &:before {
-      content: ""
-    }
-  }
-}
+// .slick-arrow.inside {
+//   z-index: 1;  
+//   .slick-next {
+//     background: url("../images/arrow-right.png") center;
+//     right: 0px;
+//     height: 130px;
+//     width: 100px;
+//     &:before {
+//       content: ""
+//     }
+//   }
+//   .slick-prev {
+//     background: url("../images/arrow-left.png") center;
+//     left: 0;
+//     width: 100px;
+//     height: 130px;
+//     z-index: 1;
+//     &:before {
+//       content: ""
+//     }
+//   }
+// }
 
 .my-next.slick-arrow {
   position: absolute;
@@ -167,4 +171,8 @@
   margin-left: -100px;
   color: $main;
   z-index: 1;
+  &.inside {
+    margin-left: 0;
+    color: $white;
+  }
 }
