--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,6 +20,20 @@
       error_no_verification_code: 'لطفآ کد ارسال شده را وارد نمایید',
       login_return_url: '/fa/'
     }
+    
+    var settingsCreatePlaces = {
+      name: 'نام را پور کنید',
+      address: 'آدرس را پور کنید',
+      intro: 'توضیحات پر کن',
+      lat: 'محل را روی نقشه انتاخاب کنید',
+      lng: 'محل را روی نقشه انتاخاب کنید',
+      image: 'حداقل ی عکس',
+      url: 'http://visitiran.ir/fa/api/places/',
+      return_url: 'image-upload-done.html',
+      success: 'موفق',
+      error_server_connection: 'خطا در ایجاد برقراری ارتباط با سرور',
+    }
+
   </script>
   
   {% if page.custom_css %}
