--- a/assets/css/pages/_createPlaces.scss
+++ b/assets/css/pages/_createPlaces.scss
@@ -14,7 +14,8 @@
       padding: 0;
       height: 34px;
       border-radius: 4px;
-      max-width: 500px;
+      max-width: 600px;
+      cursor: pointer;
     }
   }
 }
@@ -33,10 +34,10 @@
   }
   #mapcontainer {
     width: 300px;
-    height: 500px;
+    height: 400px;
     @media (max-width: 400px) {
       width: 380px;
-      height: 500px;
+      height: 400px;
     }
     @media (max-width: 500px) {
       width: 480px;
@@ -61,6 +62,12 @@
     width: 500px !important;
     #mapcontainer {
       width: 500px;
+    }
+  }
+  @media (min-width: 620px) {
+    width: 600px !important;
+    #mapcontainer {
+      width: 600px;
     }
   }
 }
