--- a/assets/css/pages/_province.scss
+++ b/assets/css/pages/_province.scss
@@ -327,6 +327,9 @@
 }
 
 .social {
+  #commentToggle {
+    cursor: pointer;
+  }
   form {
     display: inline;
   }
@@ -343,13 +346,17 @@
     background: $main;
     line-height: 48px;
     font-size: 20px;
+    // &.comments-title {
+    //   background: $white;
+    //   color: $black;
+    // }
   }
   .content {
-    display: flex;
-    flex-direction: row-reverse;
+    display: flex;    
     margin-top: 0;
     padding-top: 30px;
     flex-wrap: wrap;
+    position: relative;
     .left {
       flex: 1;
       display: flex;
@@ -371,47 +378,6 @@
           border: none;
           color: $white;
           padding: 0 30px;
-        }
-      }
-
-      .rate {
-        display: flex;
-        flex-direction: row-reverse;
-        justify-content: flex-start;
-        font-size: 30px;
-        margin-top: 10px;
-        flex-wrap: wrap;
-        .text {
-          font-size: 16px;
-          line-height: 30px;
-          flex: 0 0 160px;
-        }
-        .rating {
-          unicode-bidi: bidi-override;
-          direction: rtl;
-          text-align: center;
-          flex: 0 0 200px;
-        }
-        .rating {
-          unicode-bidi: bidi-override;
-          direction: rtl;
-          text-align: center;
-        }
-        .rating > span {
-          display: inline-block;
-          position: relative;
-          width: 1.1em;
-        }
-        .rating > span:hover,
-        .rating > span:hover ~ span {
-          color: transparent;
-        }
-        .rating > span:hover:before,
-        .rating > span:hover ~ span:before {
-          content: "\2605";
-          position: absolute;
-          left: 0;
-          color: gold;
         }
       }
     }
@@ -469,7 +435,7 @@
           }
         }
       }
-    }
+    }    
   }
 
   @media (max-width: 1100px) {
