--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,10 +15,12 @@
       lang: 'fa',
       register_url: 'http://visitiran.ir/fa/api/register/',
       login_url: 'http://visitiran.ir/fa/api/login/',
+      login_url_token: 'http://visitiran.ir/fa/api/obtain-auth-token/',
       error_server_connection: 'خطا در ایجاد برقراری ارتباط با سرور',
       error_no_email: 'ایمیل خود را وارد نمایید',
       error_no_verification_code: 'لطفآ کد ارسال شده را وارد نمایید',
-      login_return_url: '/fa/'
+      login_return_url: '/fa/',
+      logout_url: '/fa/logout/'
     }
 
     var settings_comments_province = {      
@@ -68,6 +70,8 @@
 
     <!-- <script src="{{site.baseurl}}/assets/js/main.js" type="text/javascript"></script> -->
     <script src="{{site.baseurl}}/assets/js/iranmap.js" type="text/javascript"></script>    
+    <script src="{{site.baseurl}}/assets/js/jwt-decode.min.js" type="text/javascript"></script>    
+    <script src="{{site.baseurl}}/assets/js/token.js" type="text/javascript"></script>   
 
     {% if page.custom_js %}
       {% for js_file in page.custom_js %}
