--- a/assets/css/pages/_authentication.scss
+++ b/assets/css/pages/_authentication.scss
@@ -39,7 +39,7 @@ $auth_input_bg_focused: lightgray;
 
       .input {
         margin: 5px 0;
-        background: $auth_input_bg;
+        background: $white;
         padding: 5px 10px;
         border: 2px solid $auth_input_bg_focused;
         border-radius: 4px;
