--- a/assets/css/component/_hero.scss
+++ b/assets/css/component/_hero.scss
@@ -75,14 +75,21 @@
   .hero-text {
     text-align: center;
     position: absolute;
-    top: 50%;
+    bottom: -23px;
     left: 50%;    
     transform: translate(-50%, -50%);
     color: $white;      
-    padding: 30px;    
+    // padding: 15px 0;
     background-color: rgba(0, 0, 0, .6);
-    width: 70%;
+    width: 100%;
+    
     @media (min-width: 900px) {
+      .top {
+        display: block;
+      }
+      padding: 30px;    
+      top: 50%;
+      bottom: auto;
       left: auto;
       right: 130px;
       transform: none;
@@ -93,32 +100,22 @@
       }
     }  
     .top {
-      font-size: 16px;      
+      font-size: 12px;      
       color: $white;
-      border-bottom: 1px solid $white;
-      padding-bottom: 10px;
-      @media (min-width: 400px) {
-        font-size: 20px;
-      }
-      @media (min-width: 500px) {
-        font-size: 24px;
-      }
+      border-bottom: 1px solid $white;   
+      padding: 5px 0;         
       @media (min-width: 899px) {
         font-size: 32px;        
+        padding-bottom: 10px;
       }  
     }
     .bottom {
       font-size: 12px;      
-      color: $white;
-      padding-top: 10px;
-      @media (min-width: 400px) {
-        font-size: 12px;
-      }
-      @media (min-width: 500px) {
-        font-size: 14px;
-      }  
+      color: $white;  
+      padding: 5px 0;       
       @media (min-width: 899px) {
         font-size: 18px;
+        padding-top: 10px;
       }      
     }
   }
