--- a/assets/css/base/_typography.scss
+++ b/assets/css/base/_typography.scss
@@ -8,7 +8,7 @@
 
 html {
   // font-family: IRANSans, yn;
-  font-family: IRANSans, yn;
+  font-family: IRANSans;
   font-weight: 300;
 }
 
@@ -16,11 +16,8 @@ input,
 textarea,
 select,
 button {
-  font-family: IRANSans, yn;
+  font-family: IRANSans;
   font-weight: 300;
 }
 
-.farsi-number {
-  font-family: yn;
-}
 
