--- a/assets/css/component/_rating.scss
+++ b/assets/css/component/_rating.scss
@@ -48,6 +48,10 @@
         font-weight: 700;
         flex: 1;
       }
+
+      .hidden {
+        display: none;
+      }
     }
 
     .review-btn {
