--- a/assets/css/pages/_profile.scss
+++ b/assets/css/pages/_profile.scss
@@ -5,7 +5,7 @@
 .frmProfile {
   box-sizing: border-box;
   &.dropzone .dz-preview .dz-image {
-    overflow: auto;
+    overflow: initial;
     width: 150px;
     height: 150px;
   }
