--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,7 @@
     }
 
     var settings_comments_province = {      
-      url: 'http://visitiran.ir/fa/api/reviews/?basetourismobject=32',     
+      url: 'http://visitiran.ir/fa/api/reviews/?basetourismobject=998',     
       error_empty_form: 'لطفآ امتیاز و متن را وارد کنید',
       is_logged_in: false,
       success: 'کامنت شما با موفقیت ثبت شد',
@@ -34,12 +34,12 @@
 
     var settings_profile = {      
       get_me_url: 'http://visitiran.ir/fa/api/users/get_me/',     
-      edit_url: 'http://visitiran.ir/fa/api/users/701/',
-      // edit_url: 'http://visitiran.ir/fa/api/users/update_me/',
+      // edit_url: 'http://visitiran.ir/fa/api/users/701/',
+      edit_url: 'http://visitiran.ir/fa/api/users/update_me/',
       server_error: 'مشکل در برقراری ارتباط با سرور',      
       success: 'شما با موفقیت ثبت شد',
-      error: 'مشکلی برای ثبت  شما به ایجاد شد'
-
+      error: 'مشکلی برای ثبت  شما به ایجاد شد',
+      too_large: 'سایز عکس زیاد'
     }
     
     var settingsCreatePlaces = {
@@ -58,6 +58,11 @@
       error_server_connection: 'خطا در ایجاد برقراری ارتباط با سرور',
     }
 
+    var settings_planner = {
+      destinations_url: 'http://visitiran.ir/fa/api/trips/destinations/',
+      destinations_create_url: 'http://visitiran.ir/fa/api/trips/',
+    }
+
   </script>
   
   {% if page.custom_css %}
@@ -71,17 +76,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>test</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">  
+  <!-- <link rel="stylesheet" href="{{site.baseurl}}/assets/css/font-awesome.min.css"> -->
 
   <body>
 
     {% include header.html %} {{content}} {% include footer.html %}
 
     <script  src="http://code.jquery.com/jquery-3.3.1.min.js"  integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-
+    <!-- <script src="{{site.baseurl}}/assets/js/jquery.min.js" type="text/javascript"></script>     -->
     <!-- <script src="{{site.baseurl}}/assets/js/main.js" type="text/javascript"></script> -->
     <script src="{{site.baseurl}}/assets/js/iranmap.js" type="text/javascript"></script>    
     <script src="{{site.baseurl}}/assets/js/jwt-decode.min.js" type="text/javascript"></script>    
     <script src="{{site.baseurl}}/assets/js/token.js" type="text/javascript"></script>   
+    <script src='http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.5/jquery-ui.min.js'></script>
 
     {% if page.custom_js %}
       {% for js_file in page.custom_js %}
